--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,7 @@
 <!-- div for sidbar nav -->
 <div class="button-filter">filter +</div>
 <div class="filter" style="display: none" >
-  <div class="">
+  <div class="filter__category">
     Brands
       <!-- This is where Camera Brand Names are supposed to be listed
             but Camera and Lenses are not yet available -->
@@ -20,18 +20,18 @@
   </div>
 </div>
 
-<div class="products">
+<div class="product">
       <!-- Div Container for all Product cards-->
   <% @products.sample(8).each do |product| %>
-    <div class="card-product">
-      <div class="product-photo"><h1>Photos</h1></div>
-      <div class="product-information">
-        <div class="product-left">
+    <div class="product__card">
+      <div class="product__photo"><h1>Photos</h1></div>
+      <div class="product__information">
+        <div class="product__left">
           <p><%= product.name %></p>
           <p><%= product.user.first_name %> <%= product.user.last_name %></p> <!-- include owner rating -->
           <p><%= product.price_per_day %>€/day</p>
         </div>
-        <div class="product-right">
+        <div class="product__right">
           <h1>Product ratings</h1>  <!-- put product ratings instead with stars -->
           <h1><%= link_to "More Info", product_path(product) %></h1>
         </div>
