--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -3,7 +3,6 @@
   height: 100vh;
 }
 
-
 .upper-div {
   height: 40vh;
   width:  100%;
@@ -15,15 +14,12 @@
   width: 100%;
   position: relative;
   overflow: hidden;
-
-
 }
 
 .carousel-slide {
   display: flex;
   height: 37vh;
   width: 46vh;
-
 }
 
 #prevBtn {
@@ -54,7 +50,6 @@
 
 .dates-button {
   background-color: white;
-
   color: black;
   font-size: 10px;
   border: 1px solid black;
@@ -119,15 +114,16 @@
   margin-top: 3vh;
 }
 
+.products-specs {
+  display: none;
+  font-size: 8px;
+}
+
 .line1 {
   height: 1px;
   background-color: black;
   width: 90%;
   margin-left: 5%;
-}
-
-.products-specs {
-  font-size: 8px;
 }
 
 .line2 {
@@ -174,6 +170,7 @@
 .arrow2-up {
   transform: rotate(180deg);
 }
+
 .arrow3 {
   transition: all 0.4s linear;
 }
