added cameras index page, linked cameras in navbar, assigned variables to cameras index

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -24,7 +24,7 @@
       <!-- Div Container for all Product cards-->
   <% @products.sample(8).each do |product| %>
     <div class="product__card">
-      <div class="product__photo"><h1>Photos</h1></div>
+      <div class="product__photo"><h1>No Photo in Cloudinary</h1></div>
       <div class="product__information">
         <div class="product__left">
           <p><%= product.name %></p>
