--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,13 +6,13 @@
     </div>
     <ul class="navbar1__burger-dropdown">
       <li>
-        <a class="navbar1__burger-link" href="#">Cameras</a>
+        <%= link_to "Cameras", cameras_path %>
       </li>
       <li>
-        <a class="navbar1__burger-link" href="#">Lenses</a>
+        <%= link_to "Lenses", cameras_path %>
       </li>
       <li>
-        <a class="navbar1__burger-link" href="#">Drones</a>
+        <%= link_to "Drones", cameras_path %>
       </li>
       <li>
         <a class="navbar1__burger-link" href="#">Support Equipment</a>
