--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -3,6 +3,7 @@
 
 .button-filter {
   width: 100vw;
+  height: 2%;
   border: none;
   text-align: right;
   font-size: 64%;
@@ -11,14 +12,42 @@
 }
 
 .filter {
-  // display: none;
+  display: none;
   position: absolute;
   text-align: right;
-  width: 60vw;
+  width: 20vw;
   height: 100%;
   font-size: 64%;
   padding-right: 2%;
   background-color: $light-gray;
   right: 0%;
   top: 9.1%;
+  h1 {
+    font-size: 1em;
+  }
+}
+
+@media only screen and (min-width: $breakpoint-tablet) {
+  .button-filter {
+    display: none;
+  }
+
+  .filter {
+    display: block;
+    position: relative;
+  }
+
+  .index {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    padding-top: 2%;
+  }
+}
+
+@media only screen and (min-width: $breakpoint-desktop) {
+  .index {
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+    padding-top: 2%;
+  }
 }
