--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,10 +12,10 @@
         <%= link_to "Lenses", products_path(:productable_type => 'Lens')%>
       </li>
       <li>
-        <a class="navbar1__burger-link" href="#">Drones</a>
+        <%= link_to "Drones", products_path(:productable_type => 'Drone')%>
       </li>
       <li>
-        <a class="navbar1__burger-link" href="#">Support Equipment</a>
+        <%= link_to "Support Equipment", products_path = { :productable_type => 'Audio', :productable_type => 'Lighting', :productable_type => 'Stabilizer', :productable_type => 'Tripod' }%>
       </li>
     </ul>
 
